ลบ error จากการโหลดรูปภาพไม่เจอ

--- a/template/index.html
+++ b/template/index.html
@@ -7,9 +7,7 @@
     <title>{{ name }}</title>
   </head>
   <body>
-    <div id="app">
-      <img src="src/assets/logo.png" />
-    </div>
+    <div id="app"></div>
     <script src="./src/main.js"></script>
   </body>
 </html>
